Added X.run alias for X.bdbrun and X.tdbrun
git-svn-id: file:///svn/tokudb@692 c7de825b-a66e-492c-adef-691d508d4ae1

--- a/src/tests/Makefile
+++ b/src/tests/Makefile
@@ -49,12 +49,15 @@ check.bdb: $(RUN_BDB_TESTS)
 check.tdb: $(RUN_TDB_TESTS)
 
 # Need these rule so that Make knows about all the file names
-.PHONY: %.bdbrun %.tdbrun
+.PHONY: %.bdbrun %.tdbrun %.run
 $(RUN_ALL_TESTS):
 $(ALL_TESTS):
 
 %.foo:
 	echo $@
+
+%.run: %.bdbrun %.tdbrun
+	
 
 %.bdbrun: %.bdb
 	$(UNSETTOKUENV); $(VGRIND) ./$<
