log_code.c compiles (but lots of compiler warnings).  Addresses #11
git-svn-id: file:///svn/tokudb@713 c7de825b-a66e-492c-adef-691d508d4ae1

--- a/newbrt/Makefile
+++ b/newbrt/Makefile
@@ -48,6 +48,10 @@ BINS =  $(REGRESSION_TESTS) \
 logdump: LDFLAGS+=-lz
 logdump: log-internal.h brttypes.h yerror.h log.h kv-pair.h
 
+log_code.o: log_header.h
+log_code.c log_header.h: logformat
+	./logformat
+
 libs: log.o
 bins: $(BINS)
 check: bins
